--- a/package.json
+++ b/package.json
@@ -3,25 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-pdf-viewer/core": "^3.7.0",
+    "@react-pdf-viewer/default-layout": "^3.7.0",
+    "@react-pdf-viewer/full-screen": "^3.7.0",
+    "@react-pdf-viewer/highlight": "^3.7.0",
+    "@react-pdf-viewer/open": "^3.7.0",
+    "@react-pdf-viewer/page-navigation": "^3.7.0",
+    "@react-pdf-viewer/print": "^3.7.0",
+    "@react-pdf-viewer/scroll-mode": "^3.7.0",
+    "@react-pdf-viewer/toolbar": "^3.7.0",
+    "@react-pdf-viewer/zoom": "^3.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "pdfjs-dist": "^2.16.105",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
